[gd_scene load_steps=6 format=2]

[ext_resource path="res://DeadScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://sfx/Select.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="DeadScreen" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Try again" type="Button" parent="."]
margin_left = 6.80157
margin_top = 36.9528
margin_right = 58.8016
margin_bottom = 47.9528
rect_clip_content = true
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Try again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 18.3996
margin_top = 48.0996
margin_right = 46.3996
margin_bottom = 59.0996
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Shrouded in darkness you embrace the madness"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="pressed" from="Try again" to="." method="_on_Try_again_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
